--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://tejasbharatgaikwad:7UwEgLtSV5mc@ep-withered-water-a5ki2dky.us-east-2.aws.neon.tech/neondb?sslmode=require"
+DATABASE_URL=""
